--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Viktor Tochi's Official Website
+email: zendevlpr@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+  This is Viktor Tochi's personal website and blog about life, photography, techology, Nigeria,
+  society, things, professional growth and many more. 
+#Write an awesome description for your new site here. You can edit this
+ # line in _config.yml. It will appear in your document head meta (for
+  #Google search results) and in your feed.xml site description.
+baseurl: "/blog/" # the subpath of your site, e.g. /blog
 url: "https://viktochi.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 excerpt-seperator: "<!--more-->"
 
